apply Google CodeStyle